# wl_translation_window

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: env_info.rs  main.rs  translator.rs  window.rs
